--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "express": "^4.18.2",
     "handlebars": "^4.7.8",
     "hbs": "^4.2.0",
+    "method-override": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5"
   },
   "devDependencies": {
